# albert-strategy-orchestrator

./: Cargo.toml  README.md  SCRIPTS_README.md  SKILL.md  facts.json  game_theory_analysis_generic.json  general-purpose-beispiele.md  ooda_analysis_generic.json  orchestrator_consolidated.json  strategy_report_spec.json  sun_mate_analysis_generic.json  systems_analysis_generic.json  total_report_v3.html
scripts/: build_strategy_spec.py  call_the_swat.desktop  call_the_swat.sh  gen_report.py  pipeline-render.py  pipeline.sh  run-pipeline.sh  strategy-report-render.py
scripts/skills/systems/: analyze.py
skills/fact-audit/: SKILL.md
skills/fact-audit/scripts/: fact-audit.py
skills/final-factcheck/: SKILL.md
skills/strategy-pipeline/scripts/: final-factcheck.py  run-pipeline.sh
src/: api.rs  consensus.rs  discovery.rs  main.rs
