[package]
name = "albert-strategy-orchestrator"
version = "0.1.0"
edition = "2021"
description = "albert strategy --skills sun_tzu,ooda,systems : multi-framework strategy orchestrator consuming the standardized StrategySkill schema.json"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
